--- a/ecommerce.yml
+++ b/ecommerce.yml
@@ -1,5 +1,5 @@
 token:
-  expriration-time: 8640000000
+  expiration-time: 8640000000
   secret: my-very-long-secret-key-1234567890123456-from-git
 
 gateway:
